--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,7 @@ input::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+body {
+  font-family: "Montserrat", serif;
+  font-optical-sizing: auto;
+}
