--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,6 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 body {
-  font-family: "Montserrat", serif;
+  font-family: "Open Sans", serif;
   font-optical-sizing: auto;
 }
